# homeworks

1 dz/1/: main.cpp
1 dz/10/: main.cpp
1 dz/11/: main.cpp
1 dz/2/: main.cpp
1 dz/3/: main.cpp
1 dz/4/: main.cpp
1 dz/5/: main.cpp
1 dz/6/: main.cpp
1 dz/7/: main.cpp
1 dz/8/: main.cpp
1 dz/9/: main.cpp
2 dz/1/: main.cpp
2 dz/2/: main.cpp
2 dz/3/: main.cpp
2 dz/4/: fraction.cpp  fraction.h  functions.h  gcd.cpp  main.cpp  quicksort.cpp  quicksort.h
2 dz/5/: heapSort.cpp  heapSort.h  main.cpp
2 dz/6/: animalCounter.cpp  animalCounter.h  bullsAndCows.cpp  bullsAndCows.h  main.cpp  numberGenerator.cpp  numberGenerator.h
3 dz/1/: CMakeLists.txt  findMax.cpp  findMax.h  heapSort.cpp  main.cpp
3 dz/2/: CMakeLists.txt  main.cpp  myStack2.cpp  myStack2.h  postfix.cpp  postfix.h
3 dz/3/: IntStack2.cpp  calculator.cpp  calculator.h  main.cpp  myIntStack2.cpp
3 dz/4/: IntStack2.cpp  IntStack2.h  calculator.cpp  calculator.h  charStack2.cpp  charStack2.h  main.cpp  myCharStack2.cpp  myCharStack2.h  myIntStack2.cpp  myIntStack2.h  nestingRuleCheck.cpp  nestingRuleCheck.h  postfix.cpp  postfix.h
4 dz/1/: main.cpp  stringComparison.cpp  stringComparison.h
4 dz/2/: main.cpp  spiral.cpp  spiral.h
4 dz/3/: countingSort.cpp  countingSort.h  main.cpp  minNumber.cpp  minNumber.h
4 dz/4/: intList.cpp  intList.h  main.cpp
4 dz/5/: countGame.cpp  countGame.h  cycleList.cpp  cycleList.h  main.cpp
7 dz/3.4/: adtString.cpp  adtString.h  hashTable.cpp  hashTable.h  list.cpp  list.h  main.cpp
